maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:25: error: not found: value aMurSud
    if (aMurSud(x,y) == false && getIndication(x,y+1) == 9999) {
        ^JediEscaper:28: error: not found: value aMurEst
    if (aMurEst(x,y) == false && getIndication(x+1,y) == 9999) {
        ^